[package]
name = "https_redirects_only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.2", features = ["derive"] }
log = "0.4"
simple_logger = "2.1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
